--- a/roles/openbsd.update/tasks/main.yml
+++ b/roles/openbsd.update/tasks/main.yml
@@ -1,6 +1,10 @@
 ---
 # openbsd.update/tasks/main.yml
 
+#
+# sysupgrade
+#
+
 # While sysupgrade(8) was provided to OpenBSD 6.5 users, it is not
 # by default included in base unless all available patches have been
 # applied using syspatch(8).  For the sake of simplicity in this play
@@ -16,8 +20,8 @@
     upgrade: yes
   notify:
     - restart host
-    - reinstall packages
-    - delete unused packages
+    - (pkg_add) reinstall snapshot packages
+    - (pkg_delete) delete unused packages
 
 
 # In cases where a user may upgrade to a new release and it has been
@@ -28,6 +32,10 @@
 - name: (sysupgrade) run handlers now if upgrade completed
   meta: flush_handlers
 
+
+#
+# syspatch
+#
 
 # For OpenBSD hosts running 6.1 or later and _NOT_ running current, we
 # can patch the base system using syspatch(8).
@@ -41,13 +49,17 @@
     - restart host
 
 
+#
+# pkg_add
+#
+
 # Regardless of any above actions, we should update any installed
 # packages.  One missing condition is that if our `reinstall packages`
 # handler runs, this is pointless.
-- name: update packages
+- name: (pkg_add) update packages
   when: packages_reinstalled is undefined
   package:
     name: '*'
     state: latest
   notify:
-    - delete unused packages
+    - (pkg_add) delete unused packages
