--- a/roles/openbsd.vmm/handlers/main.yml
+++ b/roles/openbsd.vmm/handlers/main.yml
@@ -2,18 +2,7 @@
 # openbsd.vmm/handlers/main.yml
 
 #
-# Actions
-#
-
-- name: (vmm) create default disk
-  shell: >
-    vmctl create -s 20G /home/vm/default/disk.qcow2
-  register: result
-  changed_when: ('imagefile created' in result.stdout)
-
-
-#
-# Errors
+# prereq - Errors
 #
 
 - name: (prereq) host missing nested paging support
@@ -23,6 +12,27 @@
       https://www.openbsd.org/faq/faq16.html#Prerequisites for
       additional clarification.
 
+
+#
+# vmm - Actions
+#
+
+- name: (vmm) create default disk
+  shell: >
+    vmctl create -s 20G /home/vm/default/disk.qcow2
+  register: result
+  changed_when: ('imagefile created' in result.stdout)
+
+
+- name: (vmm) reload vmd
+  service:
+    name: 'vmd'
+    state: reloaded
+
+
+#
+# vmm - Errors
+#
 
 - name: (vmm) failed to start vmd
   fail:
