No need to be so verbose

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,57 +1,26 @@
 # ansible.cfg
+#
+# - https://github.com/ansible/ansible/blob/devel/examples/ansible.cfg
+# - https://docs.ansible.com/ansible/latest/reference_appendices/config.html
+#
+##
 
 [defaults]
-#
 ansible_managed = 'Managed by Ansible, do not edit directly'
-
-# Show the time it takes for each task to complete
-callback_whitelist = timer, profile_tasks
-
-# Don't require checking the host_key when connecting to a host via SSH
-# for the first time.
-host_key_checking = False
-
-# Define the default inventory location so that we don't have to define
-# it at runtime.
-inventory = ./inventory.yml
-
-# Execute tasks on up to 25 hosts at a time
+callback_whitelist = profile_tasks, timer
 forks = 25
-
-# How often Ansible should poll for statuses (default is 0.001). By
-# increasing this number, we're freeing up CPU resources.
-internal_poll_interval = 0.05
-
-# If your system has cowsay, Ansible will use it to display "fun"
-# messages using it.  I hate fun, so this is disabled.
+host_key_checking = False
+internal_poll_interval = 0.01
+inventory = ./inventory.yml
 nocows = 1
-
-# Use the YAML callback plugin.
 stdout_callback = yaml
-
-# Use the maximum variable compression level to slightly lessen the
-# bandwidth requirements of this playbook.
 var_compression_level = 9
 
-
 [persistent_connection]
-# These timeout settings allow for a remote host that is performing a
-# long-running task to (hopefully) finish and respond without being
-# killed.
-#
-# If you have a task that requires a reboot, or some other long-running
-# operation where the host may be unresponsive, most likely this window
-# of time is enough for the task to complete successfully.
 command_timeout = 300
 connect_timeout = 300
 timeout = 300
 
-
 [ssh_connection]
-# Reduce the number of SSH operations required to execute a module
 pipelining = True
-
-# If an SSH connection fails, Ansible by default will not attempt to
-# retry connecting.  Here we will set that Ansible should try to
-# connect one more time before signaling the connection failed.
 retries = 1
