--- a/inventory.yml
+++ b/inventory.yml
@@ -35,6 +35,7 @@ all:
 # server (or some kind of real hardware).
 servers:
   hosts:
+    jcmdln.net:
     openbsd.local:
       ansible_host: 192.168.1.210
     # localhost:
