--- a/deploy.yml
+++ b/deploy.yml
@@ -1,23 +1,22 @@
 ---
 # deploy.yml
 
-- name: Deploy core services
+- name: Deploy bare metal services
   hosts: all
   roles:
+    # - role: openbsd.ansible
+    # - role: openbsd.bgpd
+    # - role: openbsd.grafana
     - role: openbsd.httpd
+    # - role: openbsd.iked
+    # - role: openbsd.ldapd
+    # - role: openbsd.mail
+    # - role: openbsd.mirror
+    # - role: openbsd.nameserver
     - role: openbsd.pf
-    - role: openbsd.prometheus
+    # - role: openbsd.prometheus
+    # - role: openbsd.relayd
+    # - role: openbsd.router
+    # - role: openbsd.switch
     # - role: openbsd.vmm
-
-
-- name: Deploy virtualized services
-  hosts: virtual
-  roles:
-    - role: openbsd.compute
-    - role: openbsd.grafana
-    - role: openbsd.iked
-    - role: openbsd.ldapd
-    - role: openbsd.mirror
-    - role: openbsd.nameserver
-    - role: openbsd.router
-    - role: openbsd.www
+    # - role: openbsd.www
