--- a/roles/openbsd.vmm/tasks/main.yml
+++ b/roles/openbsd.vmm/tasks/main.yml
@@ -10,97 +10,87 @@
   shell: >-
     dmesg | egrep "(VMX/EPT|SVM/RVI)"
   changed_when: (vmm_supported.stdout_lines | length) == 0
-  notify:
-    - (prereq) host missing nested paging support
 
+- name: (prereq) host missing nested paging support
+  fail:
+    msg: >
+      This host does not appear to support vmm(4).  Please see
+      https://www.openbsd.org/faq/faq16.html#Prerequisites for
+      additional clarification.
+  when: vmm_supported.changed
 
 #
 # Quirks
 #
 
-# TODO: missing description; needs better name
-- name: (quirks) increase the max length of arpq
+- name: (quirks) allow IP forwarding for NAT
   sysctl:
-    name: 'net.inet.ip.arpq.maxlen'
-    value: '1024'
+    name: "net.inet.ip.forwarding"
+    value: "1"
     state: present
 
-
-#
-# httpd
-#
-
-- name: (httpd) configure httpd
-  template:
-    src: etc/httpd.conf
-    dest: /etc/httpd.conf
-    owner: root
-    group: wheel
-    mode: '0644'
-  notify:
-    - restart httpd
-
-
-- name: (httpd) create directories
-  with_items:
-    - '/var/www/htdocs/openbsd'
-    - '/var/www/htdocs/openbsd/release'
-  file:
-    path: '{{ item }}'
-    owner: root
-    group: wheel
-    mode: '0751'
-    state: directory
-
-
-- name: (httpd) enable httpd
-  service:
-    name: httpd
-    enabled: true
-
-
-- name: (httpd) start httpd
-  service:
-    name: httpd
-    state: started
-
+# TODO: missing description; needs better name
+# - name: (quirks) increase the max length of arpq
+#   sysctl:
+#     name: "net.inet.ip.arpq.maxlen"
+#     value: "1024"
+#     state: present
 
 #
 # vmm
 #
 
-- name: (vmm) adjust '/etc/vm.conf'
-  template:
-    src: etc/vm.conf.j2
-    dest: /etc/vm.conf
-  notify:
-    - (vmm) reload vmd
-
-
 - name: (vmm) create directories
   with_items:
-    - '/home/vm'
-    - '/home/vm/default'
+    - "/home/vm"
+    - "/home/vm/default"
   file:
-    path: '/home/vm'
+    path: "{{ item }}"
     state: directory
     owner: root
     group: wheel
 
+- name: (vmm) configure vmm
+  template:
+    src: etc/vm.conf.j2
+    dest: /etc/vm.conf
+  notify:
+    - reload vmd
 
 - name: (vmm) check if default vmm disk exists
   stat:
-    path: '/home/vm/default/disk.qcow2'
+    path: "/home/vm/default/quark.qcow2"
   register: disk
   changed_when: not disk.stat.exists
-  notify:
-    - (vmm) create default disk
 
+- name: (vmm) create default disk(s)
+  shell: >-
+    vmctl create -s 20G /home/vm/default/quark.qcow2
+  when: disk.changed
+  register: result
+  changed_when: ('imagefile created' in result.stdout)
+  failed_when: false
+
+- name: (vmm) enable and start vmd service
+  service:
+    name: "vmd"
+    state: started
+    enabled: true
 
 # TODO: move to vmctl module
 - name: (vmm) check vmd
-  command: >-
+  shell: >-
     rcctl check vmd
-  changed_when: (vmd_check.stdout != 'vmd(ok)')
+  register: vmd_check
+  changed_when: vmd_check.stdout != 'vmd(ok)'
+
+#
+# pf
+#
+
+- name: (pf) adjust '/etc/pf.conf'
+  template:
+    src: etc/pf.conf.j2
+    dest: /etc/pf.conf
   notify:
-    - (vmm) failed to start vmd
+    - reload pf
