--- a/roles/openbsd.vmm/tasks/main.yml
+++ b/roles/openbsd.vmm/tasks/main.yml
@@ -9,38 +9,13 @@
   register: vmm_supported
   shell: >-
     dmesg | egrep "(VMX/EPT|SVM/RVI)"
-  changed_when: (vmm_supported.stdout_lines | length) == 0
-
-- name: (prereq) host missing nested paging support
-  fail:
-    msg: >
-      This host does not appear to support vmm(4).  Please see
-      https://www.openbsd.org/faq/faq16.html#Prerequisites for
-      additional clarification.
-  when: vmm_supported.changed
+  failed_when: (vmm_supported.stdout_lines | length) == 0
 
 #
-# Quirks
+# Setup
 #
 
-- name: (quirks) allow IP forwarding for NAT
-  sysctl:
-    name: "net.inet.ip.forwarding"
-    value: "1"
-    state: present
-
-# TODO: missing description; needs better name
-# - name: (quirks) increase the max length of arpq
-#   sysctl:
-#     name: "net.inet.ip.arpq.maxlen"
-#     value: "1024"
-#     state: present
-
-#
-# vmm
-#
-
-- name: (vmm) create directories
+- name: create directories
   with_items:
     - "/home/vm"
     - "/home/vm/default"
@@ -50,7 +25,7 @@
     owner: root
     group: wheel
 
-- name: (vmm) configure vmm
+- name: configure vmm
   template:
     src: etc/vm.conf.j2
     dest: /etc/vm.conf
@@ -58,7 +33,7 @@
     - reload vmd
 
 # TODO: move to vmctl module
-- name: (vmm) create default disk(s)
+- name: create default disk(s)
   with_items: "{{ vmm_plans }}"
   shell: >-
     vmctl create -s {{ item.disk }} /home/vm/default/{{ item.name }}.qcow2
@@ -66,26 +41,59 @@
   failed_when: false
   changed_when: ('imagefile created' in result.stdout)
 
-- name: (vmm) enable and start vmd service
+- name: enable and start vmd service
   service:
     name: "vmd"
     state: started
     enabled: true
 
 # TODO: move to vmctl module
-- name: (vmm) check vmd
+- name: check vmd
   shell: >-
     rcctl check vmd
   register: vmd_check
   changed_when: vmd_check.stdout != 'vmd(ok)'
 
 #
-# pf
+# Quirks
 #
 
-- name: (pf) adjust '/etc/pf.conf'
+- name: allow IP forwarding for NAT
+  sysctl:
+    name: "net.inet.ip.forwarding"
+    value: "1"
+    state: present
+
+# TODO: missing description; needs better name
+# - name: increase the max length of arpq
+#   sysctl:
+#     name: "net.inet.ip.arpq.maxlen"
+#     value: "1024"
+#     state: present
+
+#
+# pf(8)
+#
+
+- name: add pf includes
   template:
-    src: etc/pf.conf.j2
-    dest: /etc/pf.conf
+    src: "etc/pf/includes/{{ item }}.j2"
+    dest: "/etc/pf/includes/{{ item }}"
+    owner: root
+    group: wheel
+    mode: "0644"
+  with_items: "{{ vmm_pf_includes }}"
+
+- name: update pf_includes list
+  set_fact:
+    pf_includes: "{{ pf_includes + vmm_pf_includes }}"
+
+- name: adjust /etc/pf/includes.conf
+  template:
+    src: etc/pf/includes.conf.j2
+    dest: /etc/pf/includes.conf
+    owner: root
+    group: wheel
+    mode: "0644"
   notify:
     - reload pf
