--- a/roles/openbsd.vmm/vars/main.yml
+++ b/roles/openbsd.vmm/vars/main.yml
@@ -5,12 +5,24 @@ vmm_pf_includes:
   - "vmm.conf"
 
 vmm_plans:
-  - name: quark
-    memory: 512M
-    disk: 10G
-  - name: electron
+  quark:
+    disk: 5G
+    memory: 256M
+  electron:
+    disk: 25G
     memory: 1G
-    disk: 20G
-  - name: proton
+  proton:
+    disk: 50G
     memory: 2G
-    disk: 40G
+  neutron:
+    disk: 50G
+    memory: 4G
+  atom:
+    disk: 100G
+    memory: 8G
+
+customers:
+  - name: jcmdln
+    email: jcmdln@gmail.com
+    plan: quark
+    state: enable
