--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,6 +11,11 @@ nocows = 1
 stdout_callback = yaml
 var_compression_level = 9
 
+# Plugins (might be unnecessary)
+#action_plugins = plugins/actions
+#callback_plugins = plugins/callback
+#filter_plugins = plugins/filter
+
 [persistent_connection]
 command_timeout = 300
 connect_timeout = 300
