--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,17 +6,24 @@ callback_whitelist = profile_tasks, timer
 forks = 25
 host_key_checking = False
 internal_poll_interval = 0.01
-inventory = ./inventory.yml
 nocows = 1
 stdout_callback = yaml
 var_compression_level = 9
 
-# Plugins (might be unnecessary)
-#action_plugins = plugins/actions
-#callback_plugins = plugins/callback
-#filter_plugins = plugins/filter
+action_plugins = plugins/actions
+callback_plugins = plugins/callbacks
+filter_plugins = plugins/filters
+
+group_vars = vars/groups
+host_vars = vars/hosts
+
+handlers = handlers
+inventory = inventory.yml
+library = library
+roles = roles
 
 [persistent_connection]
+# give ample time for system reboots
 command_timeout = 300
 connect_timeout = 300
 timeout = 300
