--- a/inventory.yml
+++ b/inventory.yml
@@ -1,22 +1,10 @@
 ---
 # inventory.yml
 
-all:
-  vars:
-    ansible_become_method: doas
-    ansible_become_user: root
-    ansible_connection: ssh
-    ansible_python_interpreter: /usr/local/bin/python3
-    ansible_user: root
-
-compute:
+aswl:
   hosts:
-    us-east-[1:3].jcmdln.net:
+    aswl.org:
 
-network:
+openbsd_amsterdam:
   hosts:
-    us-east-[1:3].jcmdln.net:
-
-storage:
-  hosts:
-    us-east-[1:3].jcmdln.net:
+    jcmdln.net:
