--- a/site.yml
+++ b/site.yml
@@ -6,60 +6,49 @@
 #
 
 - name: Prepare hosts
-  hosts: all
+  any_errors_fatal: true
   gather_facts: false
+  hosts: all
 
   pre_tasks:
-    - name: Check if Python 3 is installed
-      raw: command -v python3
+    - name: Check if Python is present
+      raw: >-
+        command -v python3
+      changed_when: not python_exists
       register: python_exists
 
-    - name: Install Python 3 if missing
-      raw: pkg_add python3
+    - name: Install Python if missing
+      raw: >-
+        pkg_add python3
       when: not python_exists
+
+    - name: Gather facts for future tasks
+      setup:
 
   roles:
     - role: openbsd.syspatch
     - role: openbsd.sysupgrade
 
 #
-# Core
+# DNS
 #
 
-- name: Deploy core configuration(s) to all hosts
-  hosts: all
+- name: Setup NSD servers
+  any_errors_fatal: true
+  gather_facts: false
+  hosts: dns
+
   roles:
-    - role: openbsd.httpd
-    - role: openbsd.pf
+    - role: openbsd.nsd
 
 #
-# Network
+# Mail
 #
 
-- name: Configure network hosts
-  hosts: network
-  pre_tasks:
-    - name: Do some vxlan shit
+- name: Setup mail servers
+  any_errors_fatal: true
+  gather_facts: false
+  hosts: mail
+
   roles:
-    - role: openbsd.router
-    - role: openbsd.switch
-
-#
-# Storage
-#
-
-- name: Prepare storage hosts
-  hosts: storage
-  pre_tasks:
-    - name: Probably have to do stuff first
-  roles:
-    - role: openbsd.nfs
-
-#
-# Compute
-#
-
-- name: Prepare compute hosts to run vmm(4)
-  hosts: compute
-  roles:
-    - role: openbsd.vmm
+    - role: openbsd.mail
