Use reboot/connect vars; update wording

--- a/roles/openbsd.syspatch/tasks/syspatch.yml
+++ b/roles/openbsd.syspatch/tasks/syspatch.yml
@@ -8,7 +8,7 @@
 
 - name: reboot host if patched
   reboot:
-    connect_timeout: 600
-    reboot_timeout: 600
+    connect_timeout: "{{ connect_timeout }}"
+    reboot_timeout: "{{ reboot_timeout }}"
   when:
     - syspatch.changed
