--- a/roles/openbsd.sysupgrade/tasks/sysupgrade.yml
+++ b/roles/openbsd.sysupgrade/tasks/sysupgrade.yml
@@ -8,8 +8,8 @@
 
 - name: reboot if upgraded
   reboot:
-    connect_timeout: 600
-    reboot_timeout: 600
+    connect_timeout: "{{ connect_timeout }}"
+    reboot_timeout: "{{ reboot_timeout }}"
   when:
     - sysupgrade.changed
 
